--- a/app/src/main/res/layout/activity_delete_note.xml
+++ b/app/src/main/res/layout/activity_delete_note.xml
@@ -1,11 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Spinner
         android:id="@+id/spnNotes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:minHeight="48dp"
+        android:padding="10dp" />
 
     <Button
         android:id="@+id/btnDelete"
